# kmmsProg

./: .gitignore  CMakeLists.txt  README.md
Arcanoid/sources/: main.cpp
Mario/oop_version/: main.cpp
Mario/origin/: main.c  main.cpp
Mario/refactor_version/: main.cpp
Summertime_study/YandexHandbook/: template_print.cpp  wagons.cpp  work_check.cpp
code_run/: 01_Youlia_Nikita_and_problems.cpp  05_29th_problem_of_analitycs.cpp
include/: items_linking.hpp  menu.hpp
leet_code/: 1768_merge_strings_lternately.cpp  389_find_the_difference.cpp
projects/: CMakeLists.txt
projects/LongNumber/: CmakeLists.txt
projects/MultiLevelMenu/: CMakeLists.txt
projects/ProjectSort/: CMakeLists.txt
projects/ProjectSort/src/: CMakeLists.txt  linearSort.cpp  main.cpp
projects/ProjectSort/src/linearSort/: CMakeLists.txt  linearSort.cpp
projects/ProjectSort/src/linearSort/include/: CMakeLists.txt
projects/ProjectSort/test/: CMakeLists.txt  sort_unittest.cpp  test_linear.cpp
semester_2/: CMakeLists.txt
semester_2/projects/: CMakeLists.txt
src/: actions.cpp
yandex_data_structure/01_template_print/: 01_template_print.cpp  build_run.bat
yandex_data_structure/02_work_check/: 02_work_check.cpp  build_run.bat  output.txt  work_check.cpp
yandex_data_structure/03_wagons/: 03_wagons.cpp  build_run.bat  input.txt
yandex_data_structure/04_ctrlx_ctrlv/: 04_ctrlx_ctrlv.cpp  build_run.bat  input.txt  output.txt
yandex_data_structure/06_was_there_the_number_before/: 06_was_there_the_number_before.cpp  output.txt
yandex_data_structure/07_common_letters/: 07_common_letters.cpp
yandex_data_structure/08_file_system/: 08_file_system.cpp
yandex_data_structure/09_subject_pointer/: 09_subject_pointer.cpp
yandex_data_structure/10_symbolic_ngram/: 10_symbolic_ngram.cpp  input.txt
yandex_data_structure/11_duplicate_vector/: 11_duplicate_vector.cpp
yandex_data_structure/12_algorithm_unique/: 12_algorithm_unique.cpp
(+47 files in other folders)
